--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <div class="top-section">
             <h1 class="header">Join our community</h1>
             <h2 class="sub-header">30 day hassle-free money back guarantee</h2>
-            <div class="card-body">
+            <div class="header-body">
              <p>Gain access to our full library of tutorials along with expert code
             reviews. Perfect for any developers who are serious about honing
             their skills.</p>
@@ -39,7 +39,8 @@
           <div class="col-md-6 col-sm-12 ">
             <div class="bottom-left">
             <h2>Monthly Subscription</h2>
-            <p> &dollar;29 per month</p>
+            <p class="dollar-amount"> &dollar;29</p>
+            <p class="per-month"> per month</p>
             <p> Full access for less than
             &dollar;1 a day </p>
             <button class="signup-btn">Sign Up</button>
