--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Single Price Grid Component</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -38,18 +33,19 @@
           </div>
           <div class="col-md-6 col-sm-12 ">
             <div class="bottom-left">
-            <h2>Monthly Subscription</h2>
-            <p class="dollar-amount"> &dollar;29</p>
-            <p class="per-month"> per month</p>
-            <p> Full access for less than
+            <h2 class="bottom-header">Monthly Subscription</h2>
+            <div class=" dollar">
+              <p2 class="dollar-amount"> &dollar;29</p2><p class="per-month "> per month</p>
+          </div>
+            <p class="bottom-body"> Full access for less than
             &dollar;1 a day </p>
             <button class="signup-btn">Sign Up</button>
             </div>
           </div>
           <div class="col-md-6 col-sm-12 ">
             <div class="bottom-right">
-            <h2>Why Us</h2>
-            <p>Tutorials by industry experts Peer &amp; expert code review Coding
+            <h2 class="bottom-header">Why Us</h2>
+            <p class="bottom-body">Tutorials by industry experts Peer &amp; expert code review Coding
             exercises Access to our GitHub repos Community forum Flashcard decks
             New videos every week</p>
             </div>
